--- a/templates/landing/index.html.twig
+++ b/templates/landing/index.html.twig
@@ -15,7 +15,7 @@
 	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="./about" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="./domain" class="nav-link">Domain</a></li>
-	          <li class="nav-item"><a class="nav-link" href="./hosting">Hosting</a></li>
+	          <li class="nav-item"><a class="nav-link" href="#webhost">Hosting</a></li>
 	          <li class="nav-item"><a href="./blog" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="./contact" class="nav-link">Contact</a></li>
 	          <li class="nav-item cta"><a href="contact.html" class="nav-link"><span>Get started</span></a></li>
@@ -99,7 +99,7 @@
       <div class="container">
       	<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 text-center heading-section ftco-animate">
-            <h2 class="mb-4">The WebHost Guarantee</h2>
+            <h2 id="webhost" class="mb-4">The WebHost Guarantee</h2>
             <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
           </div>
         </div>
