--- a/templates/landing/index.html.twig
+++ b/templates/landing/index.html.twig
@@ -5,20 +5,20 @@
 {% block body %}
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">WebHost</a>
+	      <a class="logo-link" href=""><img class="logo" src="{{ asset('images/logo.png')}}"></img></a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="./about" class="nav-link">About</a></li>
-	          <li class="nav-item"><a href="./domain" class="nav-link">Domain</a></li>
-	          <li class="nav-item"><a class="nav-link" href="#webhost">Hosting</a></li>
-	          <li class="nav-item"><a href="./blog" class="nav-link">Blog</a></li>
-	          <li class="nav-item"><a href="./contact" class="nav-link">Contact</a></li>
-	          <li class="nav-item cta"><a href="contact.html" class="nav-link"><span>Get started</span></a></li>
+	          <li class="nav-item active"><a href="index.html" class="nav-link">Accueil</a></li>
+	          <li class="nav-item"><a href="#about" class="nav-link">Qu'est ce que c'est ?</a></li>
+	          <li class="nav-item"><a href="#team" class="nav-link">L'équipe</a></li>
+	          {# <li class="nav-item"><a class="nav-link" href="#webhost">Hosting</a></li> #}
+	          <li class="nav-item"><a href="#faq" class="nav-link">FAQ</a></li>
+	          <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+	          <li class="icons-container"><a href="contact.html" class=""><img class="nav-icon" src="images/google_icon.png"></i><img class="nav-icon" src="images/apple-icon.png"></i></a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -32,12 +32,14 @@
           <div class="row slider-text align-items-center" data-scrollax-parent="true">
 
             <div class="col-md-5 wrap col-sm-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-              <h1 class="mb-4 mt-5" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Everything you get what you need to Host your website</h1>
-              <p class="mb-4 mb-md-5 sub-p" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Up to 90% Discount with Free Domain Name Registration</p>
-              <p><a href="#" class="btn btn-primary p-3 px-xl-5 py-xl-3">Get started</a> <a href="#" class="btn btn-primary btn-primary-2 p-3 px-xl-5 py-xl-3">Read more</a></p>
+              <h1 class="mb-4 mt-5" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Devenez éco-responsable facilement</h1>
+              <p class="mb-4 mb-md-5 sub-p" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">L'application est gratuite et disponible sous Android et IOS</p>
+              {# <p><a href="#" class="btn btn-primary p-3 px-xl-5 py-xl-3">Get started</a> <a href="#" class="btn btn-primary btn-primary-2 p-3 px-xl-5 py-xl-3">Read more</a></p> #}
+              <a href=""><img class="apple-img" src="{{ asset('images/download-appstore.svg')}}"></img></a>
+              <a href=""><img class="android-img" src="images/google-play-badge.png"></img></a>
             </div>
             <div class="col-md-7 ftco-animate">
-            	<img src="images/dashboard_full_1.png" class="img-fluid" alt="">
+            	<img class="diapo1-dc" src="images/mockup.png" class="img-fluid" alt="">
             </div>
 
           </div>
@@ -50,12 +52,12 @@
           <div class="row slider-text align-items-center" data-scrollax-parent="true">
 
             <div class="col-md-5 wrap col-sm-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-              <h1 class="mb-4 mt-5" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">The Web Hosting Platform Made for You</h1>
+              <h1 class="mb-4 mt-5" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Rejoignez-nous sur les réseaux sociaux !</h1>
               <p class="mb-4 mb-md-5">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
               <p><a href="#" class="btn btn-primary p-3 px-xl-5 py-xl-3">Get started</a> <a href="#" class="btn btn-primary btn-primary-2 p-3 px-xl-5 py-xl-3">Read more</a></p>
             </div>
             <div class="col-md-7 ftco-animate">
-            	<img src="images/dashboard_full_3.png" class="img-fluid" alt="">
+            	<img class="diapo2-dc" src="images/affiche_deep_carbon.png" class="img-fluid" alt="">
             </div>
 
           </div>
@@ -322,7 +324,7 @@
 		<section class="ftco-services">
 			<div class="container-wrap">
 				<div class="row no-gutters">
-					<div class="col-lg-5 img services-img" style="background-image: url(images/bg_1.jpg);" data-stellar-background-ratio="0.5">
+					<div class="col-lg-5 img services-img videoplayer" style="background-image: url(images/bg_1.jpg);" data-stellar-background-ratio="0.5">
         		<a href="https://vimeo.com/45830194" class="icon popup-vimeo d-flex justify-content-center align-items-center">
 	        		<span class="icon-play"></a>
 	        	</a>
@@ -330,41 +332,41 @@
 					<div class="col-lg-7">
 						<div class="services-wrap p-4 p-md-5">
       				<div class="heading-section mb-5 ftco-animate">
-		            <h2 class="mb-2">Why Choose Us?</h2>
-		            <span class="subheading">Peoples Choice WebHost The Best Web Hosting</span>
+		            <h2 class="mb-2">Pourquoi choisir notre application ?</h2>
+		            <span class="subheading">Nous nous appuyons sur des technologies et des challenges récents</span>
 		          </div>
       				<div class="d-md-flex">
       					<div class="one-half mr-4">
       						<div class="list-services d-flex ftco-animate">
 		      					<div class="icon d-flex order-md-last justify-content-center align-items-center">
-		      						<span class="flaticon-cloud-computing"></span>
+		      						<img src="images/artificial-intelligence.png"></img>
 		      					</div>
 		      					<div class="text pl-4 pl-sm-0 pr-md-4 text-md-right">
-			      					<h3>Free Domain Transfer</h3>
-			      					<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+			      					<h3>Intelligence artificielle</h3>
+			      					<p>bla bla</p>
 		      					</div>
 		      				</div>
-		      				<div class="list-services d-flex ftco-animate">
-		      					<div class="icon d-flex order-md-last justify-content-center align-items-center">
-		      						<span class="flaticon-bandwidth"></span>
-		      					</div>
-		      					<div class="text pl-4 pl-sm-0 pr-md-4 text-md-right">
-			      					<h3>Unlimited BandWidth</h3>
+		      				<div class="list-services d-flex ftco-animate margin-bottom-remover">
+							  <div class="text pl-4 pl-sm-0 pr-md-4 text-md-right right-text">
+			      					<h3>Ecologie</h3>
 			      					<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
 		      					</div>
+		      					<div class="icon d-flex order-md-last justify-content-center align-items-center left-icon">
+		      						<img src="images/icon.png"></img>
+		      					</div>
 		      				</div>
-		      				<div class="list-services d-flex ftco-animate">
+		      				<div class="list-services d-flex ftco-animate margin-top-remover">
 		      					<div class="icon d-flex order-md-last justify-content-center align-items-center">
-		      						<span class="flaticon-shield"></span>
+		      						<img src="images/recycle-sign.png"></img>
 		      					</div>
 		      					<div class="text pl-4 pl-sm-0 pr-md-4 text-md-right">
-			      					<h3>Security</h3>
+			      					<h3>Mobile</h3>
 			      					<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
 		      					</div>
 		      				</div>
       					</div>
 
-      					<div class="one-half">
+      					{# <div class="one-half">
       						<div class="list-services d-flex ftco-animate">
 		      					<div class="icon d-flex justify-content-center align-items-center">
 		      						<span class="flaticon-guarantee"></span>
@@ -373,8 +375,8 @@
 			      					<h3>99% Uptime</h3>
 			      					<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
 		      					</div>
-		      				</div>
-		      				<div class="list-services d-flex ftco-animate">
+		      				</div> #}
+		      				{# <div class="list-services d-flex ftco-animate">
 		      					<div class="icon d-flex justify-content-center align-items-center">
 		      						<span class="flaticon-settings"></span>
 		      					</div>
@@ -382,15 +384,15 @@
 			      					<h3>Free Website Optimization</h3>
 			      					<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
 		      					</div>
-		      				</div>
-		      				<div class="list-services d-flex ftco-animate">
+		      				</div> #}
+		      				{# <div class="list-services d-flex ftco-animate">
 		      					<div class="icon d-flex justify-content-center align-items-center">
 		      						<span class="flaticon-support"></span>
 		      					</div>
 		      					<div class="text pl-4 pl-sm-0 pl-md-4">
 			      					<h3>24/7 Tech Support</h3>
 			      					<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
-		      					</div>
+		      					</div> #}
 		      				</div>
       					</div>
       				</div>
@@ -404,9 +406,9 @@
       <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
-            <span class="subheading">Customer Says</span>
-            <h2 class="mb-4">Our satisfied customer says</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p>
+            {# <span class="subheading">XXXXXXX</span> #}
+            <h2 class="mb-4">L'équipe</h2>
+            <p>L'équipe est de 20 d'étudiants en master 2 Conception de projets numériques et multimédia</p>
           </div>
         </div>
         <div class="row ftco-animate">
@@ -414,71 +416,15 @@
             <div class="carousel-testimony owl-carousel ftco-owl">
               <div class="item">
                 <div class="testimony-wrap p-4 pb-5">
-                  <div class="user-img mb-5" style="background-image: url(images/person_1.jpg)">
+                  <div class="user-img mb-5" style="background-image: url(images/montaigne.png)">
                     <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
+                      <img src="images/isic.jpg" class="icon-quote-left isic"></img>
                     </span>
                   </div>
                   <div class="text">
-                    <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Mark Web</p>
-                    <span class="position">Marketing Manager</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap p-4 pb-5">
-                  <div class="user-img mb-5" style="background-image: url(images/person_2.jpg)">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text">
-                    <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Mark Web</p>
-                    <span class="position">Interface Designer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap p-4 pb-5">
-                  <div class="user-img mb-5" style="background-image: url(images/person_3.jpg)">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text">
-                    <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Mark Web</p>
-                    <span class="position">UI Designer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap p-4 pb-5">
-                  <div class="user-img mb-5" style="background-image: url(images/person_1.jpg)">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text">
-                    <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Mark Web</p>
-                    <span class="position">Web Developer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap p-4 pb-5">
-                  <div class="user-img mb-5" style="background-image: url(images/person_1.jpg)">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text">
-                    <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Mark Web</p>
-                    <span class="position">System Analyst</span>
+                    <p class="mb-5">Nous sommes un groupe hétéroclite avec des compétences très variées alliant communication, marketing, programmation et graphisme.  </p>
+                    <p class="name">Master Humanités numériques</p>
+                    <span class="position">Spécialité conception de projets numériques</span>
                   </div>
                 </div>
               </div>
@@ -646,10 +592,8 @@
     <footer class="ftco-footer ftco-bg-dark ftco-section">
       <div class="container">
         <div class="row mb-5">
-          <div class="col-md">
+		          <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">WebHost</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -658,22 +602,9 @@
             </div>
           </div>
           <div class="col-md">
-            <div class="ftco-footer-widget mb-4 ml-md-5">
-              <h2 class="ftco-heading-2">Unseful Links</h2>
-              <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">Servers</a></li>
-                <li><a href="#" class="py-2 d-block">Windos Hosting</a></li>
-                <li><a href="#" class="py-2 d-block">Cloud Hosting</a></li>
-                <li><a href="#" class="py-2 d-block">OS Servers</a></li>
-                <li><a href="#" class="py-2 d-block">Linux Servers</a></li>
-                <li><a href="#" class="py-2 d-block">Policy</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md">
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Navigational</h2>
-              <ul class="list-unstyled">
+              <ul class="list-unstyled footerlist">
                 <li><a href="#" class="py-2 d-block">Home</a></li>
                 <li><a href="#" class="py-2 d-block">Domain</a></li>
                 <li><a href="#" class="py-2 d-block">Hosting</a></li>
@@ -682,26 +613,6 @@
                 <li><a href="#" class="py-2 d-block">Contact</a></li>
               </ul>
             </div>
-          </div>
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Office</h2>
-            	<div class="block-23 mb-3">
-	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
-	              </ul>
-	            </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 text-center">
-
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
       </div>
