structure et rédaction

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
+            <link rel="icon" type="image/png" href="{{ asset('images/logo.png')}}" />
             <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,,500,600,700" rel="stylesheet">
             <link rel="stylesheet" href="{{ asset('css/open-iconic-bootstrap.min.css') }}">
             <link rel="stylesheet" href="{{ asset('css/animate.css')}}">
@@ -20,6 +21,7 @@
         {% endblock %}
     </head>
     <body>
+    <div id="accueil"></div>
         {% block body %}{% endblock %}
         {% block javascripts %}
         <script src="{{ asset('js/jquery.min.js')}}"></script>
