--- a/templates/landing/index.html.twig
+++ b/templates/landing/index.html.twig
@@ -293,7 +293,7 @@
 		            <span class="subheading">Nous nous appuyons sur des technologies d'avenir et des challenges actuels</span>
 		          </div>
       				<div class="d-md-flex">
-      					<div class="one-half mr-4">
+      					<div class="mr-4 marginer">
       						<div class="list-services d-flex ftco-animate">
 		      					<div class="icon d-flex order-md-last justify-content-center align-items-center">
 		      						<img src="images/artificial-intelligence.png">
